--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5"> Washington, DC  · (202) 848-6366 ·
             <a href="mailto:juhmeer.grear@gmail.com">juhmeer.grear@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I am currently a junior in high school focused on computer science, game design, and psychology. I am also working on obtaining the rank of eagle scout in Boy Scout Troop 544. I spend my time playing vidoe games, solving puzzles and playing lacrosse, and aspire to be a game designer and content creator.  </p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -77,7 +77,7 @@
             <a href="#">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/Laverntius">
               <i class="fab fa-twitter"></i>
             </a>
             <a href="#">
@@ -100,7 +100,7 @@
               <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">November 2018 - Present</span>
             </div>
           </div>
 
@@ -111,7 +111,7 @@
               <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">February 2018 - May 2019</span>
             </div>
           </div>
 
@@ -133,7 +133,7 @@
               <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">June 2017 - June 2018</span>
             </div>
           </div>
 
@@ -152,10 +152,10 @@
               <h3 class="mb-0">Washington Leadership Academy</h3>
               <div class="subheading mb-3"></div>
               <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <p>GPA: 3.53</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">August 2016 - Present</span>
             </div>
           </div>
 
