--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5"> Washington, DC  · (202) 848-6366 ·
             <a href="mailto:juhmeer.grear@gmail.com">juhmeer.grear@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am currently a junior in high school focused on computer science, game design, and psychology. I am also working on obtaining the rank of eagle scout in Boy Scout Troop 544. I spend my time playing vidoe games, solving puzzles and playing lacrosse, and aspire to be a game designer and content creator.  </p>
+          <p class="lead mb-5">I am currently a junior in high school focused on computer science, game design, and psychology. I am also working on obtaining the rank of eagle scout in Boy Scout Troop 544. I spend my time playing video games, solving puzzles and playing lacrosse, and aspire to be a game designer and content creator.  </p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
