at convention, updaed exp

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
-            </a>
+            </a href="https://www.linkedin.com/in/jamir-grier-594518182/">
             <a href="#">
               <i class="fab fa-github"></i>
             </a>
             <a href="https://twitter.com/Laverntius">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/jamir.grier">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -97,7 +97,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern</h3>
               <div class="subheading mb-3">High School Esports League</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p><li>Provide customer support both in our Discord communities and over our online support chat service</li>
+<li>Provide basic tournament administration for rule clarifications, match disputes, and technical support</li>
+<li>Work with HSEL staff members to develop new projects and features for the HSEL such as podcasts and community game nights.</li></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2018 - Present</span>
@@ -108,7 +110,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern</h3>
               <div class="subheading mb-3">American Psychological Association</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <p><li>Working with issues related with early career psychologists.</li> 
+              <li>Writing articles directed at ealy career psychologist based on APA research.</li>
+              <li>Creation of informational video series for early career psychologists.</li> </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">February 2018 - May 2019</span>
@@ -119,7 +123,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Counselor</h3>
               <div class="subheading mb-3">Camp Mariott at GOshen Scout Reservation</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <p><li>Lesson planning for several ecology merit badges such as Astronomy </li> 
+              <li>Campsite tour guide for incoming weekly boy scout troops</li>
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2010 - December 2011</span>
@@ -130,7 +136,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Chapter vice chief of programs</h3>
               <div class="subheading mb-3">DC order of the arrow</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <p><li>Planning weekend long camping trips for 100+ scouts</li> 
+              <li>Scheduling and running monthly meetings with full agendas and food  organization.</li>
+              <li>Welcoming events for new Order of the arrow members, and co-ordinaton for out of district trips.</li> </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2017 - June 2018</span>
@@ -211,8 +219,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>Apart from being a game and web developer, I enjoy talking with friends, watching twitch streamers, playing video games.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, reading books whether they be graphic or literary novels, and I spend a large amount of my free time exploring the latest technology advancements in software and hardware designs throughout the world.</p>
         </div>
       </section>
 
@@ -240,6 +248,9 @@
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
               650 on English SAT 2 in 10th Grade</li>
+            <li>  
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              2nd place and second finish in HS VEX at NSBE 45</li>
           </ul>
         </div>
       </section>
